crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.unconditional-set-state-nested-function-expressions/error.txt
Found 1 error:

Error: Cannot call setState during render

Calling setState during render may trigger an infinite loop.
* To reset state when other state/props change, store the previous value in state and update conditionally: https://react.dev/reference/react/useState#storing-information-from-previous-renders
* To derive data from other state/props, compute the derived data during render without using state.

error.unconditional-set-state-nested-function-expressions.ts:16:2
  14 |     bar();
  15 |   };
> 16 |   baz();
     |   ^^^ Found setState() in render
  17 |
  18 |   return [x];
  19 | }
